# pandoc

./: .cirrus.yml  .editorconfig  .ghci  .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .luacheckrc  .mailmap  .stylish-haskell.yaml  .travis.yml  .travis.yml.bkp  AUTHORS.md  BUGS  Benchmark.hs  CITATION.cff  CONTRIBUTING.md  COPYING  COPYING.md  COPYRIGHT  ChangeLog  Dust of eternity  FORMATS.md  FORMATS.template  HCAR-Pandoc.tex  HLint.hs  ICU  INSTALL  INSTALL.md  Info.plist  Interact.hs  LICENSE  MANUAL.txt  Main.hs  MakeManPage.hs  Makefile  Makefile.windows  OSX-Welcome  PROFILING  Pandoc.buildinfo.in  (+120 more)
.circleci/: config.yml
.cirrus/: build_pandoc_package.ps1
.devcontainer/: .gitignore  GHC-legacy.Dockerfile  GHC.Dockerfile  LICENSE  README.md  devcontainer.json
.github/: FUNDING.yml  ISSUE_TEMPLATE  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
Text/: Pandoc.hs
app/: pandoc.hs
benchmark/: benchmark-pandoc.hs  weigh-pandoc.hs
data/: ASCIIMathML.js  ASCIIMathML.js.comment  ASCIIMathML.js.packed  LaTeXMathML.js  LaTeXMathML.js.comment  LaTeXMathML.js.packed  List.lua  MathMLinHTML.js  abbreviations  bash_completion.tpl  creole.lua  default.csl  default.theme  docbook-entities.txt  emoji.json  epub.css  init.lua  jats.csl  make-reference-files.hs  pandoc.List.lua  pandoc.lua  reader.lua  reference.docx  reference.odt  sample.lua  vimwiki.css
deb/: GlobalSignDomainValidationCA-SHA256-G2.pem  Makefile  Vagrantfile  control.in  haskell.org.pem  make_deb.sh  stack.yaml
debian/: changelog  control  copyright  pandoc-doc.doc-base  pandoc-doc.docs  pandoc.dirs  rules
doc/: custom-readers.lua  custom-readers.md  custom-writers.md  customizing-pandoc.md  epub.md  extras.md  faqs.md  filters.md  getting-started.md  jats.md  libraries.md  lua-filter-types-and-objects.md  lua-filters.md  nix.md  org.md  pandoc-lua.md  pandoc-server.md  press.md  short-guide-to-pandocs-sources.md  templates.md  typst-property-output.md  using-the-pandoc-api.md  xml.md
dzslides/: template.html
freebsd/: Makefile  Makefile.in  distinfo  pkg-descr
headers/: ConTeXtHeader
linux/: Dockerfile  Dockerfile.alpine  Makefile  control.in  make_artifacts.sh  make_deb.sh  make_linux.sh  make_tarball.sh  pandoc-server.control.in  pandoc.control.in
pandoc-cli/: README.md  pandoc-cli.cabal
pandoc-cli/lua/PandocCLI/: Lua.hs
pandoc-cli/man/: pandoc-lua.1  pandoc-server.1  pandoc-templates.5  pandoc.1
pandoc-cli/no-lua/PandocCLI/: Lua.hs
pandoc-cli/no-server/PandocCLI/: Server.hs
pandoc-cli/server/PandocCLI/: Server.hs
pandoc-cli/src/: pandoc-wasm.hs  pandoc.hs
pandoc-cli/wasm/: LICENSE  Makefile  PandocWasm.hs  convert.html  convert.old.html  convert2.html  index.html  pandoc.hs  pandoc.js
pandoc-cli/wasm/examples/: bibtex-to-csljson.tar  csv-table-to-org.tar  custom-template.tar  docx-with-equations-to-latex.tar  hello-world.tar  highlighted-code-to-html.tar  ipynb-to-rtf.tar  latex-to-docbook-with-mathml.tar  latex-with-macros-to-restructured-text.tar  man-page-to-context.tar  markdown-citations-to-plain-with-csl-style.tar  markdown-to-docbook-with-citations.tar  markdown-to-revealjs-slides.tar  markdown-to-rst.tar  mediawiki-to-docx-with-equations.tar  ris-to-formatted-markdown-bibliography.tar  rst-table-from-yaml-data.tar
pandoc-codecs/: CHANGELOG.md  LICENSE  pandoc-codecs.cabal
pandoc-codecs/app/: Main.hs
pandoc-codecs/src/: MyLib.hs
pandoc-codecs/src/Text/Pandoc/: Codecs.hs
pandoc-codecs/test/: Main.hs
pandoc-core/: pandoc-core.cabal
pandoc-core/src/Text/Pandoc/: Asciify.hs  Class.hs  Extensions.hs  Logging.hs  MIME.hs  Parsing.hs  Shared.hs  Translations.hs  UTF8.hs  XML.hs
pandoc-core/src/Text/Pandoc/Class/: CommonState.hs  IO.hs  PandocMonad.hs  PandocPure.hs  Sandbox.hs
pandoc-core/src/Text/Pandoc/Parsing/: Capabilities.hs  Citations.hs  General.hs  Lists.hs  Smart.hs  State.hs  Types.hs
pandoc-core/src/Text/Pandoc/Readers/LaTeX/: Types.hs
pandoc-lua-engine/: COPYING.md  README.md  pandoc-lua-engine.cabal
pandoc-lua-engine/src/Text/Pandoc/: Lua.hs
pandoc-lua-engine/src/Text/Pandoc/Lua/: Custom.hs  Documentation.hs  Engine.hs  ErrorConversion.hs  Filter.hs  Global.hs  Init.hs  Module.hs  Orphans.hs  PandocLua.hs  Reader.hs  Run.hs  SourcePos.hs  Writer.hs
pandoc-lua-engine/src/Text/Pandoc/Lua/Marshal/: Chunks.hs  CommonState.hs  Context.hs  Extensions.hs  Format.hs  ImageSize.hs  LogMessage.hs  PandocError.hs  ReaderOptions.hs  Reference.hs  Sources.hs  Template.hs  WriterOptions.hs
pandoc-lua-engine/src/Text/Pandoc/Lua/Module/: CLI.hs  Format.hs  Highlighting.hs  Image.hs  JSON.hs  Log.hs  MediaBag.hs  Pandoc.hs  Path.hs  Scaffolding.hs  Structure.hs  System.hs  Template.hs  Text.hs  Types.hs  Utils.hs
pandoc-lua-engine/src/Text/Pandoc/Lua/Writer/: Classic.hs  Elements.hs  Scaffolding.hs
pandoc-lua-engine/test/: bytestring-reader.lua  bytestring.lua  extensions.lua  sample.lua  tables.custom  tables.native  test-pandoc-lua-engine.hs  testsuite.native  writer-template.lua  writer-template.out.txt  writer.custom
pandoc-lua-engine/test/Tests/: Lua.hs
pandoc-lua-engine/test/Tests/Lua/: Module.hs  Reader.hs  Writer.hs
pandoc-lua-engine/test/lua/: attr-test.lua  block-count.lua  blocks-filter.lua  hello-world-doc.lua  implicit-doc-filter.lua  inlines-filter.lua  meta.lua  metatable-catch-all.lua  script-name.lua  single-to-double-quoted.lua  smart-constructors.lua  undiv.lua  uppercase-header.lua
pandoc-lua-engine/test/lua/module/: globals.lua  pandoc-format.lua  pandoc-highlighting.lua  pandoc-image.lua  pandoc-json.lua  pandoc-list.lua  pandoc-log.lua  pandoc-mediabag.lua  pandoc-structure.lua  pandoc-template.lua  pandoc-text.lua  pandoc-types.lua  pandoc-utils.lua  pandoc.lua  sample.epub  tiny.epub
pandoc-server/: README.md  pandoc-server.cabal
pandoc-server/src/Text/Pandoc/: Server.hs
web/: S5DEMO  (+24 more)
windows/: AdvancedWelcomeEulaDlg_Custom.wxs  Makefile  Pandoc-en-us.wxl  WixUI_Advanced_Custom.wxs  hslua.cabal  make-windows-installer.bat  makefile  modpath.iss  pandoc-setup.iss  pandoc.wxs  stack-appveyor.yaml  stack.yaml
(+3687 files in other folders)
